# engine

./: .gitignore  CMakeLists.txt  Doxyfile  test.json
.github/workflows/: build.yml
include/: Color.hpp  Doxyfile  GameObject.hpp  UIObject.hpp  behaviourscript.hpp  camera.hpp  color.hpp  debug.hpp  engine.hpp  events.hpp  gameobject.hpp  global.hpp  input.hpp  scene.hpp  sdlrenderer.hpp  sdltext.hpp  sdltexture.hpp  sound.hpp  time.hpp  transform.hpp  uiobject.hpp  vector2d.hpp
include/audio/: sdl_mixer_audio_sample.hpp  sdl_mixer_sound_engine.hpp  soloud_impl.hpp  soloud_sound_engine.hpp  soloud_wav_audio_sample.hpp  wav_impl.hpp
include/components/: Animator.hpp  Camera.hpp  Component.hpp  IRenderable.hpp  ITickable.hpp  RigidBody.hpp  Rigidbody.hpp  Sprite.hpp  animator.hpp  audiosource.hpp  camera.hpp  component.hpp  rigidbody.hpp  sprite.hpp  text.hpp
include/components/colliders/: BoxCollider.hpp  CircleCollider.hpp  Collider.hpp  PolygonCollider.hpp  SpriteCollider.hpp  boxcollider.hpp  chaincollider.hpp  circlecollider.hpp  collider.hpp  polygoncollider.hpp  spritecollider.hpp
include/enums/: Alignment.hpp  Key.hpp  MouseInput.hpp  alignment.hpp  anchor.hpp  collidernormal.hpp  joystick.hpp  key.hpp  mouse_input.hpp  spaces.hpp
include/handlers/: key_handler.hpp  mouse_handler.hpp
include/interfaces/: iaudio_sample.hpp  iaudiosample.hpp  iclickable.hpp  ievent.hpp  imultiplayer.hpp  inetworkable.hpp  irenderable.hpp  isound_engine.hpp  isoundengine.hpp  itickable.hpp
include/listeners/: IKeyListener.hpp  IMouseListener.hpp  ai_listener.hpp  checkpoint_listener.hpp  collider_listener.hpp  ikey_listener.hpp  imouse_listener.hpp  joystick_listener.hpp  key_listener.hpp  mouse_listener.hpp  multiplayer_listener.hpp  uiobject_listener.hpp
include/managers/: client_multiplayer_manager.hpp  event_manager.hpp  host_multiplayer_manager.hpp  multiplayer_manager.hpp
include/networking/: networking_test.hpp
include/race/behaviours/: ai_behaviour.hpp  ai_target_behaviour.hpp  car_behaviour.hpp  checkpoint_behaviour.hpp  drive_behaviour.hpp  drive_input_behaviour.hpp  drive_input_controller_behaviour.hpp  friction_behaviour.hpp  multiplayer_behaviour.hpp
include/race/components/: ai_target_listener_component.hpp
include/race/factories/: checkpoint_factory.hpp
include/race/models/: level.hpp
include/race/objects/: car.hpp  checkpoint.hpp
include/render/: irenderer.hpp  itexture.hpp  texture_pool.hpp
include/renderer/: IRenderable.hpp  IRenderer.hpp  ITexture.hpp  irenderable.hpp  irenderer.hpp  itexture.hpp
include/storage/: IProperties.hpp  iproperties.hpp  json_properties.hpp
include/uiobjects/: Button.hpp  Text.hpp  button.hpp  text.hpp
include/utils/: exceptionhandlers.hpp  random.hpp  thread_wait.hpp  trigonometry.hpp  xmlreader.hpp
p_headers/: input_conversion.h
sample/: CMakeLists.txt  main.cpp
sample/assets/: track1_outer_test.xml
src/: Engine.cpp  GameObject.cpp  UIObject.cpp  behaviourscript.cpp  camera.cpp  color.cpp  debug.cpp  engine.cpp  gameobject.cpp  global.cpp  input.cpp  json_converters.hpp  rendercall.cpp  rendercall.hpp  scene.cpp  sdlrenderer.cpp  sdltext.cpp  sdltexture.cpp  sound.cpp  time.cpp  transform.cpp  uiobject.cpp  vector2d.cpp
src/audio/: sdl_mixer_audio_sample.cpp  sdl_mixer_sound_engine.cpp  soloud_impl.cpp  soloud_sound_engine.cpp  soloud_wav_audio_sample.cpp  wav_impl.cpp
src/components/: Animator.cpp  Camera.cpp  Collider.cpp  Component.cpp  RigidBody.cpp  Rigidbody.cpp  Sprite.cpp  animator.cpp  audiosource.cpp  camera.cpp  component.cpp  rigidbody.cpp  sprite.cpp  text.cpp
src/components/colliders/: BoxCollider.cpp  CircleCollider.cpp  Collider.cpp  PolygonCollider.cpp  SpriteCollider.cpp  boxcollider.cpp  chaincollider.cpp  circlecollider.cpp  collider.cpp  polygoncollider.cpp  spritecollider.cpp
src/handlers/: collision_handler.cpp  collision_handler.hpp  key_handler.cpp  mouse_handler.cpp
src/interfaces/: imultiplayer.cpp
src/listeners/: ai_listener.cpp  checkpoint_listener.cpp  collider_listener.cpp  joystick_listener.cpp  key_listener.cpp  mouse_listener.cpp  multiplayer_listener.cpp
src/managers/: client_multiplayer_manager.cpp  event_manager.cpp  host_multiplayer_manager.cpp  multiplayer_manager.cpp
src/networking/: multiplayer_client.cpp  multiplayer_client.hpp  multiplayer_host.cpp  multiplayer_host.hpp  network_client.cpp  network_client.hpp  networking_test.cpp  signaling_client.cpp  signaling_client.hpp  steam_networking.cpp  steam_networking.hpp  steam_networking_utils.cpp  steam_networking_utils.hpp
src/race/behaviours/: ai_behaviour.cpp  ai_target_behaviour.cpp  car_behaviours.cpp  checkpoint_behaviour.cpp  drive_behaviour.cpp  drive_input_behaviour.cpp  friction_behaviour.cpp  (+2 more)
src/renderer/: texture_pool.cpp
src/storage/: json_properties.cpp
src/uiobjects/: Button.cpp  Text.cpp  button.cpp  text.cpp
src/utils/: random.cpp  xmlreader.cpp  xmlreader.hpp
test/: CMakeLists.txt
test/mocks/: mock_audio_engine.hpp  mock_engine.hpp  mock_event_manager.hpp  mock_gameobject.hpp  mock_mouse_moved_event.hpp  mock_properties.hpp  mock_renderable_component.hpp  mock_renderer.hpp  mock_scene.hpp  mock_tickable_component.hpp  mock_tickable_renderable_component.hpp
test/tests/: EngineTest.cpp  GameObjectTests.cpp  UIObjectTest.cpp  camera_tests.cpp  color_tests.cpp  debug_tests.cpp  engine_test.cpp  event_manager_test.cpp  gameobject_tests.cpp  global_test.cpp  json_properties_tests.cpp  networking_tests.cpp  soloud_tests.cpp  sound_tests.cpp  time_test.cpp  uiobject_tests.cpp  vector2d_tests.cpp  vector2dtest.cpp
test/tests/components/: ComponentTests.cpp  animator_tests.cpp  audiosource_tests.cpp  audiosourcetest.cpp  camera_tests.cpp  component_tests.cpp  scene_tests.cpp  sprite_tests.cpp
test/tests/components/colliders/: boxcollider_tests.cpp  chaincolider_tests.cpp  circlecollider_tests.cpp  collider_tests.cpp  polygoncolider_tests.cpp  spritecollider_tests.cpp
test/tests/uiobjects/: TextTest.cpp  button_tests.cpp
test/tests/utils/: trigonometry_tests.cpp
(+7 files in other folders)
